
  o Minor bugfixes:
    - Actually set the purpose correctly for descriptors inserted with
      purpose=controller.
    - When we have k non-v2 authorities in our DirServer config,
      we ignored as many as k v2 authorities while updating our
      network-statuses.
    - Correctly back-off from requesting router descriptors that we are
      having a hard time downloading.

  o Minor features:
    - When routers publish SVN revisions in their router descriptors,
      authorities now include those versions correctly in networkstatus
      documents.


Changes in version 0.1.2.13 - 2007-04-24
  o Minor fixes:
    - Fix a memory leak when we ask for "all" networkstatuses and we
      get one we don't recognize.
    - Add more asserts to hunt down bug 417.
    - Disable kqueue on OS X 10.3 and earlier, to fix bug 371.


Changes in version 0.1.2.12-rc - 2007-03-16
  o Major bugfixes:
    - Fix an infinite loop introduced in 0.1.2.7-alpha when we serve
      directory information requested inside Tor connections (i.e. via
      begin_dir cells). It only triggered when the same connection was
      serving other data at the same time. Reported by seeess.

  o Minor bugfixes:
    - When creating a circuit via the controller, send a 'launched'
      event when we're done, so we follow the spec better.


Changes in version 0.1.2.11-rc - 2007-03-15
  o Minor bugfixes (controller), reported by daejees:
    - Correct the control spec to match how the code actually responds
      to 'getinfo addr-mappings/*'.
    - The control spec described a GUARDS event, but the code
      implemented a GUARD event. Standardize on GUARD, but let people
      ask for GUARDS too.


Changes in version 0.1.2.10-rc - 2007-03-07
  o Major bugfixes (Windows):
    - Do not load the NT services library functions (which may not exist)
      just to detect if we're a service trying to shut down. Now we run
      on Win98 and friends again.

  o Minor bugfixes (other):